# PyrhonScratch

./: CMakeLists.txt  resources.qrc
models/: modelCUBE.dae
shaders/: commonShader.fs  commonShader.vs
src/: bone.h  camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  openGLWidget.cpp  openGLWidget.h  texture.h  vertex.h
